[gd_scene load_steps=6 format=3 uid="uid://e053qi2cm044"]

[ext_resource type="Texture2D" uid="uid://bku2n0hejop8" path="res://assets/sprites/fundo.png" id="1_vl3y1"]
[ext_resource type="Script" path="res://scenes/credits.gd" id="1_wescv"]
[ext_resource type="Texture2D" uid="uid://bdivfxouxxlh2" path="res://assets/sprites/Créditos_.png" id="2_kxcg6"]
[ext_resource type="FontFile" uid="uid://bqauqttxysl4t" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-Medium.ttf" id="3_kqabu"]
[ext_resource type="FontFile" uid="uid://dxbupxvjecbd4" path="res://assets/fonts/Source_Code_Pro/static/SourceCodePro-Regular.ttf" id="4_77o8o"]

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wescv")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 0
offset_right = 1913.0
offset_bottom = 1072.0
texture = ExtResource("1_vl3y1")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 24.057
anchor_top = 13.299
anchor_right = 24.057
anchor_bottom = 13.299
offset_left = -46127.4
offset_top = -14342.9
offset_right = -43566.4
offset_bottom = -12902.9
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.699949, 0.699949)
texture = ExtResource("2_kxcg6")
expand_mode = 1

[node name="CreditsLabel" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 390.0
offset_right = 1475.0
offset_bottom = 720.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 46
text = "credits(asteria.class( ))"

[node name="ProgTitle" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 459.0
offset_right = 1475.0
offset_bottom = 789.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 34
text = "Programação"

[node name="ProgText" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 518.0
offset_right = 1475.0
offset_bottom = 848.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 30
text = "João Victor Barreto | Rafael Lima"

[node name="RoteiroTitle" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 566.0
offset_right = 1475.0
offset_bottom = 896.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 34
text = "Roteiro"

[node name="RoteiroText" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 616.0
offset_right = 1475.0
offset_bottom = 946.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 30
text = "Joana Iozzi | Christian Tucci "

[node name="ArtTitle" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 656.0
offset_right = 1475.0
offset_bottom = 986.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 34
text = "Arte"

[node name="ArtText" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 706.0
offset_right = 1475.0
offset_bottom = 1036.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 30
text = "Daniel da Silva | Fernanda Vieira | July Teixeira "

[node name="ArtTitle2" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 744.0
offset_right = 1475.0
offset_bottom = 1074.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 34
text = "Game Design"

[node name="ArtText2" type="RichTextLabel" parent="."]
modulate = Color(0.717647, 0.807843, 0.764706, 1)
layout_mode = 0
offset_left = 524.0
offset_top = 794.0
offset_right = 1475.0
offset_bottom = 1124.0
theme_override_fonts/normal_font = ExtResource("3_kqabu")
theme_override_font_sizes/normal_font_size = 30
text = "Francisco Taam | Hugo Frota 
"

[node name="NextPage" type="Button" parent="."]
modulate = Color(0.906356, 0.939546, 0.923247, 1)
top_level = true
layout_mode = 0
offset_left = 1394.0
offset_top = 789.0
offset_right = 1436.0
offset_bottom = 869.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0.345098, 0.345098, 0.345098, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_77o8o")
theme_override_font_sizes/font_size = 56
text = ">"

[node name="Timer" type="Timer" parent="NextPage"]
wait_time = 0.2
autostart = true

[connection signal="button_up" from="NextPage" to="." method="_on_next_page_button_up"]
[connection signal="timeout" from="NextPage/Timer" to="." method="_on_timer_timeout"]
